<resources>
    <string name="app_name">OtoSeafile</string>
    <string name="import_busy_warn">Import is in progress, please try this operation later</string>
    <string name="export_busy_warn">Export is in progress, please try this operation later</string>
    <string name="import_reboot_info_warn">If you want all import files full available,you need reboot the device.</string>
    <string name="restore_progress">Restoring</string>
    <string name="appstore_download_app">Downloading apps from appstore:</string>
    <string name="registe_success_info">注册成功！</string>
    <string name="data_seafile_name">DATA</string>
    <string name="userconfig_seafile_name">UserConfig</string>
    <string name="seafile_status_title">CloudService Status:</string>
    <string name="seafile_uploading">Uploading</string>
    <string name="seafile_downloading">Downloading</string>
    <string name="seafile_disabled">Auto Sync Pause, Please clear seafile space and upload again</string>
    <string name="seafile_status_warning">The storage space for the repo owner has been used more than 80%</string>
    <string name="seafile_status_disabled">The storage space for the repo owner has been used up</string>
    <string name="toast_register_sendmail">send mail to your mailbox, please activate mail and bind your ID</string>
    <string name="toast_register_fail">register fail(Mailbox is occupied or mailbox format is wrong)</string>
    <string name="toast_openthos_password_wrong">passowrd is wrong</string>
    <string name="toast_openthos_id_wrong">OpenthosID is wrong</string>
    <string name="toast_registe_successful">Registe successfully!</string>
    <string name="toast_registe_error">Registe failed, network request error.</string>
    <string name="toast_login_failed">Login failed, unrecognized username or password</string>
    <string name="toast_bind_successful">Bind successfully!</string>
    <string name="url_dev">https://dev.openthos.com/</string>
    <string name="url_lab">http://192.168.0.158/</string>
    <string name="url_cloud">https://cloud.openthos.com/</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_change_url">Change openthos url</string>
    <string name="toast_data_init">The data is initializing...</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="wifi_info_title">Wifi</string>
    <string name="cloud_appdata">Apps Data</string>
    <string name="cloud_startmenu">Start Menu</string>
    <string name="cloud_import">Import</string>
    <string name="cloud_export">Export</string>
    <string name="cloud_browser">Browser</string>
    <string name="cloud_appstore">App Store</string>
    <string name="cloud_browser_import">Choose Import Browsers</string>
    <string name="cloud_browser_export">Choose Export Browsers</string>
    <string name="cloud_appdata_import">Choose Import Apps</string>
    <string name="cloud_appdata_export">Choose Export Apps</string>
    <string name="okay">OK</string>
    <string name="warning_browser_import">Warning: Current browsers are imported list.</string>
    <string name="warning_browser_export">Warning: Current browsers are exported list.</string>
    <string name="warn_restore_startupmenu">Warning: Restoring this will close all applications and restart, please save works before doing this.</string>
    <string name="cloud_service_dialog_confirm">Confirm</string>
    <string name="cloud_service_dialog_cancel">Cancel</string>
    <string name="cloudfolder_path">data/sea/data/sdcard/cloudFolder/</string>
    <string name="export_confirm_dialog_info">Are you sure to sync current device related files to cloud?</string>
    <string name="toast_network_not_connect">Network is not connect</string>
    <string name="account_user_id">OpenthosID</string>
    <string name="account_email">Email</string>
    <string name="account_user_password">password  </string>
    <string name="account_bind">bind OpenthosID</string>
    <string name="account_unbund">unbund OpenthosID</string>
    <string name="account_judge">Whether to release the binding</string>
    <string name="account_user_register">register</string>
    <string name="account_yes">yes</string>
    <string name="account_no">no</string>
    <string name="account_dialog_cancel">cancel</string>
    <string name="account_register">register OpenthosId</string>
    <string name="toast_register_successful">register successfully, send mail to your mailbox</string>
    <string name="toast_registe_failed">Registe failed!</string>
    <string name="toast_bind_failed">Bind failed!</string>
    <string name="openthos_id">openthosId</string>
    <string name="toast_relogin">Please re-login</string>
    <string name="read_error">Read account infomation failure.</string>
    <string name="write_error">Save account infomation failure.</string>
    <string name="sync_complete">Synchronized\n</string>
    <string name="app_url" translatable="false">http://seafile.com</string>
    <string name="welcome_to_seafile">Welcome to Seafile</string>
    <string name="select_account">Choose an account to start</string>
    <string name="edit_account">Edit</string>
    <string name="delete_account">Delete</string>
    <string name="delete">Delete</string>
    <string name="delete_repo">Are you sure you want to delete this library?</string>
    <string name="delete_file">Are you sure you want to delete this file or folder?</string>
    <string name="delete_successful">Successfully deleted</string>
    <string name="delete_repo_title">Delete library</string>
    <string name="delete_file_f">Delete file</string>
    <string name="delete_dir">Delete folder</string>
    <string name="name_hint">Name</string>
    <string name="server_hint">Server address</string>
    <string name="email_hint">Email or Username</string>
    <string name="passwd_hint">Password</string>
    <string name="passwd_min_len_limit_hint">Password (at least %d characters)</string>
    <string name="passwd_confirmation_hint">Password again</string>
    <string name="login">Log In</string>
    <string name="open_file">Open</string>
    <string name="download_file">Download</string>
    <string name="redownload_file">Download again</string>
    <string name="cancel_download">Cancel</string>
    <string name="unknown_file_type">Unknown file-type</string>
    <string name="activity_not_found">Can\`t find App to open this file</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_repo">Refresh repo</string>
    <string name="add_account">Add Account</string>
    <string name="personal">Personal</string>
    <string name="shared">Shared</string>
    <string name="libraries">Libraries</string>
    <string name="cached">Cached</string>
    <string name="activities">Activities</string>
    <string name="pick_upload_type">Upload</string>
    <string name="accounts_https_hint" translatable="false">https</string>
    <string name="transfer_tasks">Transfer List</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string-array name="pick_upload_array">
        <item>File</item>
        <item>Photos/Videos</item>
        <item>Other</item>
    </string-array>
    <string name="choose_server">Choose a Seafile Server</string>
    <string-array name="choose_server_array">
        <item>SeaCloud.cc</item>
        <item>Single Sign-On</item>
        <item>Other Seafile Server</item>
    </string-array>
    <string name="server_url_seacloud" translatable="false">https://seacloud.cc</string>
    <string name="network_down">No network connection</string>
    <string name="unknow_error">Unknown error</string>
    <string name="invalid_server_address">Invalid server address</string>
    <string name="err_server_andress_empty">Server address can\`t be empty</string>
    <string name="err_email_empty">Email can\`t be empty</string>
    <string name="err_passwd_empty">Password can\`t be empty</string>
    <string name="err_passwd_too_short">Password is too short</string>
    <string name="err_passwd_mismatch">The passwords don\`t match</string>
    <string name="err_login_failed">Login failed</string>
    <string name="err_wrong_user_or_passwd">Email or password error</string>
    <string name="err_token_expired">Authentication expired, please login again</string>
    <string name="upload">Upload</string>
    <string name="uploaded">Uploaded</string>
    <string name="updated">Updated</string>
    <string name="download_failed">Download failed</string>
    <string name="download_waiting">Download waiting</string>
    <string name="download_finished">Download finished</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="task_cancel">Cancel</string>
    <string name="task_retry">Retry</string>
    <string name="task_remove">Remove</string>
    <string name="task_remove_all_cancelled">Remove all cancelled tasks</string>
    <string name="task_remove_all_finished">Remove all finished tasks </string>
    <string name="repo_action_delete">Delete</string>
    <string name="repo_action_rename">Rename</string>
    <string name="file_action_star">Star</string>
    <string name="file_action_download">Download</string>
    <string name="file_action_update">Upload</string>
    <string name="file_share">Share</string>
    <string name="file_action_share_wechat">Share to WeChat</string>
    <string name="file_action_share_link">Share link</string>
    <string name="file_action_share_encrypt">Share link with password</string>
    <string name="file_action_export">Export</string>
    <string name="file_action_delete">Delete</string>
    <string name="file_action_rename">Rename</string>
    <string name="file_action_copy">Copy</string>
    <string name="file_action_move">Move</string>
    <string name="file_action_open_as">Open as</string>
    <string name="file_action_more">More</string>
    <string name="file_action_more_title">Choose your preferred option</string>
    <string-array name="file_action_more_array">
        <item>Export</item>
        <item>Copy</item>
        <item>Move</item>
        <item>Star</item>
    </string-array>
    <string-array name="file_type_array">
        <item>Text</item>
        <item>Audio</item>
        <item>Video</item>
        <item>Image</item>
        <item>Other</item>
    </string-array>
    <string-array name="file_action_share_array_zh" translatable="false">
        <item>@string/file_action_share_link</item>
    </string-array>
    <string-array name="file_action_share_array" translatable="false">
        <item>@string/file_action_share_link</item>
        <item>@string/file_action_share_encrypt</item>
    </string-array>
    <string name="wait">Wait</string>
    <string name="image_gallery_NoImageView_text">No image found</string>
    <string name="pick_photo_video_title">Choose photos/videos to upload</string>
    <string name="select_upload_items">Select items to upload</string>
    <plurals name="n_upload_items_selected">
        <item quantity="one">%1$d item selected</item>
        <item quantity="other">%1$d items selected</item>
    </plurals>
    <string name="repo_name_empty">Please enter the name of the library</string>
    <string name="dir_name_empty">Please enter the name of the folder</string>
    <string name="file_name_empty">Please enter the name of the file</string>
    <string name="password_empty">Please enter the password</string>
    <string name="wrong_password">wrong password</string>
    <string name="library_read_only">This library is read-only</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="choose_one_day">Choose one</string>
    <string name="start_to_recovery">Start to Recovery</string>
    <string name="recovery_info">Info:\nYou can backup your system and recovery the system from anyday</string>
</resources>