<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_property_width"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RadioGroup
        android:id="@+id/url_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_property_padding3x">

        <RadioButton
            android:paddingLeft="16dp"
            android:id="@+id/url_cloud"
            android:layout_width="300dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/url_cloud"
            android:textColor="@color/black" />

        <RadioButton
            android:paddingLeft="16dp"
            android:id="@+id/url_dev"
            android:layout_width="300dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/url_dev"
            android:textColor="@color/black" />

        <RadioButton
            android:paddingLeft="16dp"
            android:id="@+id/url_lab"
            android:layout_width="300dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/url_lab"
            android:textColor="@color/black" />

    </RadioGroup>
</LinearLayout>
