<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/actionbar_subsettings_contentInsetStart"
    android:layout_marginRight="@dimen/actionbar_subsettings_contentInsetStart"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_size"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_import"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cloud_import"
            android:textSize="24sp"
            android:button="@null"
            android:textColor="@drawable/font_color"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_export"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cloud_export"
            android:textSize="24sp"
            android:button="@null"
            android:textColor="@drawable/font_color" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#E3E3E3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/wallpaper_cloud"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_size"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/wallpaper_settings_title"
                android:textColor="@android:color/black" />

            <Switch
                android:id="@+id/switch_wallpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textOff="off"
                android:textOn="on" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#E3E3E3" />

        <LinearLayout
            android:id="@+id/wifi_cloud"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_size"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/wifi_info_title"
                android:textColor="@android:color/black" />

            <Switch
                android:id="@+id/switch_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textOff="off"
                android:textOn="on" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#E3E3E3" />

        <LinearLayout
            android:id="@+id/startmenu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_size"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/cloud_startmenu"
                android:textColor="@android:color/black" />

            <Switch
                android:id="@+id/switch_startmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textOff="off"
                android:textOn="on" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#E3E3E3" />

        <LinearLayout
            android:id="@+id/appdata_cloud"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_size"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:text="@string/cloud_appdata"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_appdata_import"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cloud_appdata_import"
                android:textColor="@android:color/black" />

            <Switch
                android:id="@+id/switch_appdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textOff="off"
                android:textOn="on" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#E3E3E3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#E3E3E3" />

        <LinearLayout
            android:id="@+id/cloud_appstore"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_size"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/cloud_appstore"
                android:textColor="@android:color/black" />

            <Switch
                android:id="@+id/switch_appstore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textOff="off"
                android:textOn="on" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#E3E3E3" />

        <LinearLayout
            android:id="@+id/cloud_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cloud_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/cloud_import"
                android:padding="20dp"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
